--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
-
-.App {
-  font-family: 'Roboto', sans-serif;
-}
-
-
-a{
-  text-decoration: none;
+.header-bg{
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+  background: var(--dark-blue);
 }
